<resources>
    <string name="app_name">BicycleCounter</string>
    <string name="start_button">Start tracking</string>
    <string name="stop_button">Stop tracking</string>
    <string name="longitudeText">Longitude:</string>
    <string name="latitudeText">Latitude:</string>
    <string name="dateText">Date and time:</string>
    <string name="computeSpeedText">computedSpeed km/h:</string>
    <string name="locationSpeedText">locationSpeed km/h:</string>
    <string name="saved_trips">Saved trips</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="tracker">Tracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="trip_name">Type your trip name</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="search">Search</string>
    <string name="filename_hint">Type exporting filename</string>
    <string name="trips_activity">Saved trips</string>
    <string name="speedText">Speed [km/h]:</string>
</resources>
