<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="99dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="337dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startButton">

        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="118dp"
            android:layout_height="wrap_content"
            android:text="@string/longitudeText" />

        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latitudeText" />

        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dateText" />

        <TextView
            android:id="@+id/computedSpeedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/computeSpeedText" />

        <TextView
            android:id="@+id/locationSpeedLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/locationSpeedText" />

    </LinearLayout>

    <Button
        android:id="@+id/startButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginBottom="6dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onStartButtonClick"
        android:text="@string/start_button"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toStartOf="@+id/stopButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stopButton"
        android:layout_width="0dp"
        android:layout_height="69dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginBottom="6dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onStopButtonClick"
        android:text="@string/stop_button"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/startButton"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="336dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/stopButton">

        <TextView
            android:id="@+id/longitudeData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/latitudeData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/dateData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/computedSpeedData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

        <TextView
            android:id="@+id/locationSpeedData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>